# hxc143

./: .gitignore  CMakeLists.txt  QSPI.txt  README.md  partitions.csv
components/application/: CMakeLists.txt
components/application/app_antenna/: CMakeLists.txt  app_antenna.c  app_antenna.h
components/application/app_axis6/: app_axis6.c
components/application/app_axis6/include/: app_axis6.h
components/application/app_gps/: app_gps.c  app_gps_parser.c  app_gps_parser.h
components/application/app_gps/include/: app_gps.h
components/application/app_gui/: app_gui.c  app_touch.cpp
components/application/app_gui/assets/: wallpaper_image.c
components/application/app_gui/include/: app_gui.h  app_touch.h
components/application/app_power/: app_power.c
components/application/app_power/include/: app_power.h
components/application/app_sdcard/: app_sdcard.c  idf_component.yml
components/application/app_sdcard/include/: app_sdcard.h
components/application/app_state/: app_state.c
components/application/app_state/include/: app_state.h
components/application/app_vibration/: app_vibration.c
components/application/app_vibration/include/: app_vibration.h
components/application/interface/: CMakeLists.txt
components/application/interface/axis6_interface/: axis6_interface.c
components/application/interface/gps_interface/: gps_interface.c
components/ml/: CMakeLists.txt  idf_component.yml  ml_runner.cc  ml_window.c
components/ml/include/: ml_runner.h  ml_window.h
components/ml/model/: model_data.cc  model_data.h  model_int8.tflite
main/: CMakeLists.txt  (+3 more)
(+28 files in other folders)
